# measuing_reliability_genelization

./: .gitignore  .gitmodules  README.md
object_detection/: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
object_detection/src/detecbench/: __init__.py  __main__.py  detecbench.py
object_detection/src/detecbench/attacks/: __init__.py  bim.py  common.py  fgsm.py  pgd.py  val_loop.py
object_detection/src/detecbench/corruptions/: __init__.py  corruptions.py  create_corrupted_data.py
semantic_segmentation/: README.md  SUPPORTED_MODELS.md  attack_results.json  install.sh  setup.py
semantic_segmentation/scripts/: aa_attack.sh  aa_attack_test_pgd_segpgd.sh  all_untargeted_attack_ade_segformer-continue.sh  all_untargeted_attack_ade_segformer.sh  all_untargeted_attacks_cityscapes_segformer_from_array_100.sh  all_untargeted_attacks_cityscapes_segformer_until_array_100.sh  first_adversarial_attack_test.sh  first_cityscapes_test.sh  mask2former_cityscapes_b_clean_acdc_attacks.sh  test_attack.sh  test_pspnet_r50-d8_4xb4-40k_voc12aug-512x512.sh  train_cityscapes_segformer_mit-b0_512x1024.sh  train_cityscapes_segformer_mit-b1-5_512x1024.sh  train_cityscapes_segformer_mit-b3_512x1024.sh  train_mask2former_swin-b-in1k-384x384-pre_8xb2-160k_ade20k-512x512.sh  train_mask2former_swin-b-in1k-384x384-pre_8xb2-90k_cityscapes-512x1024.sh  train_pascal_mask2former.sh  train_pascal_mask2former_swinb-resume2.sh  train_pascal_segformer_mit-b0_512x512.sh  train_voc12aug_segformer_160k_mit-b0-5_512x512.sh  train_voc12aug_segformer_mit-b1-5_512x512.sh
(+205 files in other folders)
