[project]
name = "DetecBench"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10,<=3.11"
dependencies = [
    "imagecorruptions",
    "mmcv>=2.0.0rc4,<2.2.0",
    "mmdet",
    "mmengine>=0.10.5",
    "openmim>=0.3.9",
    "pandas>=2.2.3",
    "submitit>=1.5.3",
    "torch==2.4.1+cu118",
    "torchaudio==2.4.1+cu118",
    "torchvision==0.19.1+cu118",
    "tyro>=0.8.14",
    "wandb>=0.18.5",
]

[dependency-groups]
dev = ["commitizen>=3.30.0", "pre-commit>=4.0.1", "ruff>=0.7.2"]

[tool.pyright]
venvPath = "."
venv = ".venv"
include = ["src"]
pythonVersion = "3.10"

[project.scripts]
detecbench = "detecbench.detecbench:main"

[tool.ruff]
line-length = 100

[tool.ruff.format]
quote-style = "double"
docstring-code-format = true

[tool.uv]
dev-dependencies = ["pudb>=2024.1.3"]

[tool.uv.sources]
mmdet = { path = "mmdetection", editable = true }
torch = [{ index = "pytorch-cu118" }]
torchvision = [{ index = "pytorch-cu118" }]
torchaudio = [{ index = "pytorch-cu118" }]
imagecorruptions = { git = "https://github.com/bethgelab/imagecorruptions.git" }

[[tool.uv.index]]
name = "pytorch-cu118"
url = "https://download.pytorch.org/whl/cu118"
explicit = true

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"
